# FlashAttention

./: CMakeLists.txt  attention.h  flash_attension.cu  flash_attention_test.cpp
src/: attention.cpp  attention.h  multi_head_self_attention.cpp  self_attention.cpp
test/: attention_test.cpp  multi_head_self_attention_test.cpp  self_attention_test.cpp
